1.want to adjust the dropdown menu size and position but failed 2. figure out the reason why the "a" in pricing-table has no w&h : though there's hover effect in the sample perhaps "a" totally doesn't exit but I think the bug is  "a" covered another  "a"(start-today button)  Q:how to fix this <a><div>.. <a>..</a></div> </a> what will happen when two "a"s  overlap..?

--- a/less/index.less
+++ b/less/index.less
@@ -66,15 +66,7 @@ a.switch-button{
     color: white;
   }
 }
-// .normal-button{
-//   display: inline-block;
-//   font-size: 20px;
-//   color:@light-gray;
-//   &:hover{
-//     color: @light-gray;
-//
-//     }
-// }
+
 a.white-button{
 	display: inline-block;
 	padding: 10px 30px;
@@ -113,6 +105,9 @@ a.white-button{
   }
   ul{
     margin-top: 1rem;
+    &.dropdown-menu{
+      margin: 0;
+    }
   }
   a{
     color:black;
@@ -211,19 +206,18 @@ a.white-button{
 
 .program{
   padding: 20px;
-   a.whole-part{
-     display:inline-block;
-     &:hover{
-      text-decoration: none;
-      background: blue;
-	}
   }
-}
+
 .package{
   text-align: center;
   position: relative;
   padding: 20px;
   background: white;
+  transition: all .3s linear;
+  &:hover{
+      text-decoration: none;
+      box-shadow:0 0 0 1px #66ccff;
+	}
   hr{
     width:80%
   }
