--- a/less/nav.less
+++ b/less/nav.less
@@ -35,3 +35,6 @@
     text-decoration-line: underline: ;
   }
 }
+.dropdown-toggle:after{
+  display: none;
+}
